--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -161,15 +161,15 @@
     </div>
 
     <div id="reachout-section">
-        <h1>REACH OUT</h1>
-        <h2>gagelieble@hotmail.com</h2>
+        <img id="topo-reach-left" src="{% static 'imgs/topoL.svg' %}" alt="">
+        <img id="topo-reach-right" src="{% static 'imgs/topoR.svg' %}" alt="">
+        <h1>REACH OUT!</h1>
+        <h2 style="font-size:30px">gagelieble@hotmail.com</h2>
         <div id="reach-links">
-            <div id="linkedin-wrap">
-            <div class='reach-btns' id="linkedin-btn"><a href="https://www.linkedin.com/in/gage-lieble-954076229">Linkedin</a></div>
-            <img id="linkedin-logo" src="{% static 'imgs/linkedinLight.svg' %}" alt="">
-        </div>
-            <div id="github-wrap">
-            <div class='reach-btns' id="github-btn"><a href="https://github.com/Gage-Lieble">Github</a></div><img id="githublight-logo" src="{% static 'imgs/gitLight.svg' %}" alt=""></div>
+            
+            <a class='reach-btns' href="https://www.linkedin.com/in/gage-lieble-954076229">Linkedin ></a>
+            
+            <a class='reach-btns' href="https://github.com/Gage-Lieble">Github ></a>
         </div>
     </div>
 
