Fixed nav color change

--- a/gagelieble_home/templates/gl_home/index.html
+++ b/gagelieble_home/templates/gl_home/index.html
@@ -43,7 +43,7 @@
         <div id="sentences">
             <p>I was born in the City of Roses, Portland OR.</p>
             <p>And I am also a recent graduate of PDX code guild!</p>
-            <p>PDX code guild is a full stack python based bootcamp that has taught me everything from programming to working on projects with other individuals.</p>
+            <p>PDX code guild is a full stack, python-based bootcamp that has taught me everything software related such as programming, using frameworks, and working on projects with other individuals.</p>
             <p>My interest in software began in my early years of middle school.</p>
             <p>In middle school I created my first website. That website was developed using HTML and CSS exclusively which I taught myself by watching various Youtube tutorials and reading through tons of pages on StackOverflow.</p>
             <p>My programming abilities have definitely improved since then and I am glad to make my childhood passion into a reality!</p>
