--- a/static/portfolio/css/style.css
+++ b/static/portfolio/css/style.css
@@ -49,6 +49,9 @@ h1{
 #nav-bar{
     background-color: rgb(29, 29, 31, .5);
     backdrop-filter: blur(5px);
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -ms-filter: blur(5px);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -63,8 +66,11 @@ h1{
 .bgblur-white{
     background-color: rgba(250, 252, 255, .5) !important;
     backdrop-filter: blur(5px);
-}
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -ms-filter: blur(5px);
 
+}
 .navcolorchange>div{
     background-color: rgb(29, 29, 31);
 }
