--- a/static/portfolio/css/style.css
+++ b/static/portfolio/css/style.css
@@ -441,7 +441,7 @@ pointer-events: all;
 #teaches-section{
     margin-top: 100px;
     padding: 0px 25px 0px 25px;
-    margin-bottom: 100%;
+    
     
 }
 .teachsub-section{
@@ -496,6 +496,7 @@ pointer-events: all;
 #grad-title{
     color: white;
     text-align: center;
+    margin-top: 250px;
 }
 
 #cert-img{
